<resources>
    <string name="app_name">Lunch Decider</string>

    <string name="title_section1">Search Restaurant</string>
    <string name="title_section2">Recommend Restaurant</string>
    <string name="title_section3">Feedback</string>

    <string name="askWeather">Weather Condition</string>
    <string name="askBudget">Budget Condition</string>
    <string name="askDrink">Free Drinks?</string>
    <string name="askRest">Enter the name of restaurant</string>

    <string name="decide">Decide!</string>
    <string name="add">Add Restaurant!</string>
    <string name="lunchIcon">Lunch Icon</string>
    <string name="restaurantName">restaurant name</string>
    <string name="searchResultOnMap">Check them on the map!</string>


    <string-array name="weatherArray">
        <item>Any</item>
        <item>Hot</item>
        <item>Cold</item>
        <item>Rainy</item>
    </string-array>
    <string-array name="drinkArray">
        <item>Change this to checkbox</item>
        <item>YES</item>
        <item>NO</item>
    </string-array>
    <string-array name="budgetArray">
        <item>Any</item>
        <item>less than 110</item>
        <item>110 to 160</item>
        <item>more than 160</item>
    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Settings</string>

    <string name="action_settings">Clear</string>
    <string name="title_activity_add_rest">AddRestActivity</string>

    <string name="dirtyWord">Fuck You!</string>
    <string name="title_activity_display_result">Search Result</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_search_result_maps">Map</string>
    <string name="title_activity_add_rest_maps">Map</string>
</resources>